@@ -1,8 +1,15 @@
-2005-01-25  Maurizio Paolini <paolini@dmf.unicatt.it>
+2005-01-26  Maurizio Paolini <paolini@dmf.unicatt.it>
 
 	* added many constructions related to polygons:
 	sides, center of mass, winding number, convexity
-	test...
+	test.
+
+	* changes in construct_mode (and in a few other
+	places) to allow the construction with a "cursor"
+	point that gives information on the constructed
+	object, but should not be inserted as argument.
+	This is used for a better interactive construction
+	of regular polygons.
 	
 2005-01-20  Maurizio Paolini <paolini@dmf.unicatt.it>
 
